--- a/styles/styles1.css
+++ b/styles/styles1.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Montserrat', sans-serif;
     background-color: #26335D;
     color: #ffffff;
 }
@@ -25,18 +25,16 @@ header {
 }
 
 .most-popular{
-    font-family: monospace;
     font-weight: 700;
-    size: 40px;
+    font-size: 40px;
     line-height: 50px;
     letter-spacing: 0.2px;
     align-items: center;
 }
 
 .paragraph {
-   font-family: monospace;
    font-weight: 400;
-   size: 14px;
+   font-size: 14px;
    line-height: 20px;
    letter-spacing: 0.2px;
    align-items: center;
@@ -52,13 +50,12 @@ header {
     background-color: #ffffff;
     color: #2b2e4a;
     padding: 20px;
-    width: 200px;
+    width: 250px;
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .h5{
-    font-family: monospace;
     font-size: 16px;
     font-weight: 700;
     line-height: 24px;
@@ -73,7 +70,6 @@ hr{
 }
 
 .paragraph-description{
-    font-family: monospace;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
@@ -81,21 +77,7 @@ hr{
     align-items: center;
 }
 
-.course .icon {
-    height: 50px;
-    margin-bottom: 20px;
-}
-
-.expert-instruction {
-    background-image: url('expert-instruction-icon.png'); /* Asegúrate de tener el icono */
-    background-size: contain;
-    background-repeat: no-repeat;
-    margin: 0 auto;
-}
-
-.online-courses {
-    background-image: url('online-courses-icon.png'); /* Asegúrate de tener el icono */
-    background-size: contain;
-    background-repeat: no-repeat;
-    margin: 0 auto;
+.course img{
+    width: 90px;
+    height: 90px;
 }
