--- a/styles/styles3.css
+++ b/styles/styles3.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Montserrat', sans-serif;
     background-color: #2b2e4a;
     color: #ffffff;
 }
@@ -12,22 +12,21 @@ body {
     line-height: 24px;
     letter-spacing: 0.2px;
     align-items: center;
-    margin: 0;
+    margin-bottom: 20px;
 }
 
 .approdable-package{
-    font-family: monospace;
     font-weight: 700;
-    size: 40px;
+    font-size: 40px;
     line-height: 50px;
     letter-spacing: 0.2px;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .paragraph {
-   font-family: monospace;
    font-weight: 400;
-   size: 14px;
+   font-size: 14px;
    line-height: 20px;
    letter-spacing: 0.2px;
    align-items: center;
@@ -43,11 +42,11 @@ body {
 .card {
     background-color: white;
     overflow: hidden;
-    width: 100%;
-    max-width: 350px;
+    width: 370px;
     text-align: left;
     position: relative;
     margin: auto;
+    height: 524px;
 }
 
 .card-header {
@@ -87,10 +86,11 @@ body {
 
 .card-icons i {
     color: black;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: #FFFFFF;
     padding: 10px;
     border-radius: 100%;
     cursor: pointer;
+    position: relative;
 }
 
 .card-body {
@@ -102,9 +102,8 @@ body {
 }
 
 .card-category {
-    font-family: monospace;
     font-weight: 700;
-    size: 14px;
+    font-size: 14px;
     line-height: 24px;
     letter-spacing: 0.2px;
     color: #8D5CF6;
@@ -113,9 +112,8 @@ body {
 }
 
 .card-title {
-    font-family: monospace;
     font-weight: 700;
-    size: 16px;
+    font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.1px;
     color:#252B42 ;
@@ -123,9 +121,8 @@ body {
 }
 
 .card-description {
-    font-family: monospace;
     font-weight: 400;
-    size: 14px;
+    font-size: 14px;
     line-height: 20px;
     letter-spacing: 0.2px;
     color: #737373 ;
@@ -133,9 +130,8 @@ body {
 }
 
 .card-sales {
-    font-family: monospace;
     font-weight: 700;
-    size: 14px;
+    font-size: 14px;
     line-height: 24px;
     letter-spacing: 0.2px;
     color: #737373 ;
@@ -179,9 +175,8 @@ body {
 }
 
 .stars-num{
-    font-family: monospace;
     font-weight: 400;
-    size: 12px;
+    font-size: 12px;
     line-height: 16px;
     letter-spacing: 0.2px;
     color: white ;
@@ -193,9 +188,8 @@ body {
 }
 
 .original-price {
-    font-family: monospace;
     font-weight: 700;
-    size: 16px;
+    font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.1px;
     color:#BDBDBD ;
@@ -203,9 +197,8 @@ body {
 }
 
 .sale-price {
-    font-family: monospace;
     font-weight: 700;
-    size: 16px;
+    font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.1px;
     color:#FF7B52;
@@ -218,7 +211,7 @@ body {
     color: #8D5CF6;
     font-weight: bold;
     border: 1px solid #8D5CF6;
-    padding: 10px 20px;
+    padding: 10px 20px 10px 20px;
     border-radius: 37px;
     position: relative;
     gap: 10px;
