--- a/styles/styles5.css
+++ b/styles/styles5.css
@@ -1,21 +1,20 @@
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Montserrat', sans-serif;
     background-color: #26335D;
     color: #ffffff;
 }
 
 .main-title {
-    font-family: monospace;
     font-weight: 700;
     font-size: 40px;
     line-height: 50px;
     letter-spacing: 0.2px;
     animation: fadeIn 1s ease-in-out;
+    margin-bottom: 20px;
 }
 
 .subheading {
-    font-family: monospace;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
@@ -47,7 +46,6 @@ body {
 }
 
 h5 {
-    font-family: monospace;
     font-weight: 700;
     font-size: 16px;
     line-height: 24px;
@@ -57,7 +55,6 @@ h5 {
 }
 
 h6 {
-    font-family: monospace;
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
