--- a/styles/styles6.css
+++ b/styles/styles6.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Montserrat', sans-serif;
     background-color: #2b2e4a;
     color: #ffffff;
     display: flex;
@@ -12,10 +12,10 @@ body {
 
 .container {
     text-align: center;
+    width: 800px;
 }
 
 .main-title {
-    font-family: monospace;
     font-weight: 700;
     font-size: 14px;
     line-height: 24px;
@@ -25,7 +25,6 @@ body {
 }
 
 .sub-title {
-    font-family: monospace;
     font-weight: 700;
     font-size: 40px;
     line-height: 50px;
@@ -35,7 +34,6 @@ body {
 }
 
 .subheading {
-    font-family: monospace;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
@@ -60,8 +58,7 @@ body {
     padding: 15px;
     border-radius: 5px 0 0 5px;
     border: none;
-    width: 300px;
-    max-width: 80%;
+    width: 600px;
     font-size: 16px;
 }
 
@@ -81,7 +78,6 @@ body {
 
 .error-message {
     color: #ff0000;
-    font-family: monospace;
     font-size: 14px;
     margin-top: 10px;
 }
