--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,13 +1,31 @@
 body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
-  background-color: #2b2e4a;
+  background-color: #26335D;
   color: #ffffff;
+}
+
+main{
+  width: 1440px;
+  height: 5500px;
 }
 
 header {
   background-color: #26335D;
   padding: 20px;
+}
+
+.background-shape{
+  position:absolute;
+  right: 1024px;
+  top: -180px;
+  z-index: 1;
+}
+
+.background-shape2{
+  position:absolute;
+  left: 1400px;
+  top:1px;
 }
 
 nav {
@@ -16,83 +34,107 @@ nav {
 }
 
 .navbar-brand {
-  width: 187px;
-  height: 58px;
   text-align: center;
-}
-
-.collapse .navbar-collapse {
-  width: 815px;
-  height: 58px;
-  text-align: center;
+  z-index: 2;
+  position: relative;
+  right: 200px;
 }
 
 .title {
-  font-family: monospace;
   font-weight: 700;
   font-size: 24px;
   line-height: 32px;
   letter-spacing: 0.1px;
   color: #FFFFFF;
+  
 }
 
-.navbar-nav1 {
-  display: flex;
-  gap: 21px;
-  margin-right: 50px;
+.navbar-nav {
+  z-index: 2;
+  position: relative;
+  right: 150px;
 }
 
-.nav ul {
-  list-style: none;
-  display: flex;
-}
-
-.nav ul li {
+.navbar-nav .nav-item {
   margin: 0 15px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+  align-items: center;
 }
 
-.nav ul li a {
+.navbar-nav .nav-item .nav-link {
   color: white;
   text-decoration: none;
-  font-family: 'Montserrat', sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.2px;
 }
 
-.login-buttons a {
-  color: white;
+.login-buttons .btn {
   margin-left: 20px;
-  text-decoration: none;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.2px;
+  align-items: center;
+}
+.login-buttons{
+  z-index: 2;
+  position: relative;
+  left: 150px;
+}
+
+.login{
+  color: white;
+}
+
+.text{
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 0.2px;
+  margin-bottom: 20px;
 }
 
 .join-us {
-  background-color: #7209b7;
+  background-color: #8D5CF6;
   padding: 10px 20px;
   border-radius: 5px;
+  color: white;
 }
 
-main {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 50px;
-  background-color: #ff3b81;
+.join-h5{
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.1px;
+  color: #FFFFFF;
+}
+
+.hero {
+  padding: 50px 0;
+  background-color: #26335D;
 }
 
 .hero-content {
-  max-width: 50%;
+  color: white;
+  z-index: 2;
+  position: relative;
+  top: 50px;
 }
 
 .hero-content h1 {
-  color: white;
-  font-size: 48px;
+  font-weight: 700;
+  font-size: 58px;
+  line-height: 80px;
+  letter-spacing: 0.2px;
   animation: fadeIn 1s ease-in-out;
 }
 
 .hero-content p {
-  color: white;
   margin: 20px 0;
   font-size: 18px;
   animation: fadeIn 1s ease-in-out;
@@ -100,7 +142,7 @@ main {
 
 .hero-buttons .btn {
   padding: 15px 30px;
-  border: none;
+  border-color: #8D5CF6;
   border-radius: 5px;
   font-size: 16px;
   margin-right: 10px;
@@ -109,7 +151,7 @@ main {
 }
 
 .btn-primary {
-  background-color: #7209b7;
+  background-color: #8D5CF6;
   color: white;
 }
 
@@ -121,24 +163,53 @@ main {
 
 .hero-image {
   position: relative;
+  left: 600px;
 }
 
-.hero-image img {
+.hero-image .main-image {
   width: 100%;
-  max-width: 400px;
+  max-width: 700px;
   animation: slideIn 1s ease-in-out;
+  position: relative;
+  right: 200px;
+  top: -60px;
+  z-index: 1;
 }
 
 .chart1 {
   position: absolute;
-  top: -20px;
-  left: 150px;
+  top: 450px;
+  left: 80px;
+  z-index: 1;
+  width: 261px;
+  height: 243px;
+  animation: slideIn 1s ease-in-out;
 }
 
 .chart2 {
+    position: absolute;
+    bottom: 500px;
+    right: 650px;
+    width: 212px;
+    height: 212px;
+    animation: slideIn 1s ease-in-out;
+    z-index: 1;
+}
+
+.icono{
   position: absolute;
-  bottom: -20px;
-  right: -20px;
+  left: -210px;
+  bottom: 130px;
+  animation: slideIn 1s ease-in-out;
+  z-index: 1;
+}
+
+.circle{
+    position: absolute;
+    right: 300px;
+    bottom: 105px;
+    animation: slideIn 1s ease-in-out;
+
 }
 
 .footer-top {
@@ -233,21 +304,21 @@ main {
   color: #8D5CF6;
 }
 
-/* Animations */
+
 @keyframes fadeIn {
-  0% { opacity: 0; }
-  100% { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes slideIn {
-  0% { transform: translateY(20px); opacity: 0; }
-  100% { transform: translateY(0); opacity: 1; }
-}
-
-.fadeIn {
-  animation: fadeIn 1s ease-in-out;
-}
-
-.slideIn {
-  animation: slideIn 1s ease-in-out;
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
 }
