--- a/styles/styles1.css
+++ b/styles/styles1.css
@@ -1,17 +1,13 @@
-body {
-    margin: 0;
-    font-family: 'Montserrat', sans-serif;
-    background-color: #26335D;
-    color: #ffffff;
-}
 
-.container {
+.page1-container {
     text-align: center;
     padding: 50px;
+    margin-left: 500px;
 }
 
 header {
     margin-bottom: 40px;
+    background-color: #26335D;
 }
 
 .practice-advice {
@@ -44,11 +40,12 @@ header {
     display: flex;
     justify-content: center;
     gap: 20px;
+    margin-top: 60px;
 }
 
 .course {
     background-color: #ffffff;
-    color: #2b2e4a;
+    color: #26335D;
     padding: 20px;
     width: 250px;
     text-align: center;
@@ -63,7 +60,7 @@ header {
     align-items: center;
 }
 
-hr{
+.hr1{
     width: 50px;
     height: 2px;
     background: #E74040;
