--- a/styles/styles3.css
+++ b/styles/styles3.css
@@ -1,11 +1,6 @@
-body {
-    margin: 0;
-    font-family: 'Montserrat', sans-serif;
-    background-color: #2b2e4a;
-    color: #ffffff;
-}
 
-.practice-advice {
+
+.page3-practice-advice {
     color: #8D5CF6;
     font-size: 14px;
     font-weight: 700;
@@ -15,7 +10,7 @@ body {
     margin-bottom: 20px;
 }
 
-.approdable-package{
+.page3-aprodable-package {
     font-weight: 700;
     font-size: 40px;
     line-height: 50px;
@@ -24,7 +19,7 @@ body {
     margin-bottom: 20px;
 }
 
-.paragraph {
+.page3-paragraph {
    font-weight: 400;
    font-size: 14px;
    line-height: 20px;
@@ -33,33 +28,38 @@ body {
    margin-bottom: 60px;
 }
 
-.card-container {
+.page3-card-container {
     display: flex;
     justify-content: center;
     gap: 20px;
 }
+.page3-container{
+    position: relative;
+    top: 75px;
+    left: 250px;
+}
 
-.card {
+.page3-card {
     background-color: white;
     overflow: hidden;
-    width: 370px;
+    width: 330px;
     text-align: left;
     position: relative;
     margin: auto;
     height: 524px;
 }
 
-.card-header {
+.page3-card-header {
     position: relative;
     padding: 0;
 }
 
-.card-image {
+.page3-card-image {
     width: 100%;
     height: auto;
 }
 
-.badge {
+.page3-badge {
     position: absolute;
     top: 10px;
     left: 10px;
@@ -71,11 +71,11 @@ body {
     font-weight: bold;
 }
 
-.icon{
+.page3-icon {
     margin-top: -4px;
 }
 
-.card-icons {
+.page3-card-icons {
     position: absolute;
     bottom: 10px;
     left: 50%;
@@ -84,7 +84,7 @@ body {
     gap: 10px;
 }
 
-.card-icons i {
+.page3-card-icons i {
     color: black;
     background-color: #FFFFFF;
     padding: 10px;
@@ -93,15 +93,15 @@ body {
     position: relative;
 }
 
-.card-body {
+.page3-card-body {
     padding: 20px;
 }
 
-.card-content {
+.page3-card-content {
     text-align: left;
 }
 
-.card-category {
+.page3-card-category {
     font-weight: 700;
     font-size: 14px;
     line-height: 24px;
@@ -111,56 +111,61 @@ body {
     margin-left: 10px;
 }
 
-.card-title {
+.page3-card-title {
     font-weight: 700;
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.1px;
-    color:#252B42 ;
+    color: #252B42;
     margin-bottom: 10px;
 }
 
-.card-description {
+.page3-card-description {
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
     letter-spacing: 0.2px;
-    color: #737373 ;
+    color: #737373;
     margin-bottom: 10px;
 }
 
-.card-sales {
+.page3-card-sales {
     font-weight: 700;
     font-size: 14px;
     line-height: 24px;
     letter-spacing: 0.2px;
-    color: #737373 ;
+    color: #737373;
     margin-bottom: 10px;
     margin-left: 7px;
 }
 
-.image{
+.page3-image {
     width: 20px;
     height: 20px;
 }
 
-.row-imagen{
+.page3-row-image {
     display: flex;
     flex-wrap: wrap;
     margin-right: -15px;
     margin-left: -8px;
 }
-.row-carrusel{
-    margin: 75px;
+
+.page3-row-carousel {
+    margin: 370px;
     display: flex;
     flex-wrap: wrap;
 }
-
-.carousel-slide{
-    margin-inline: 100px;
+#page3Carousel{
+    position: relative;
+    bottom: 300px;
 }
 
-.right{
+.page3-carousel-slide {
+    margin-inline: 2px;
+}
+
+.page3-right {
     display: flex;
     text-decoration: none;
     background-color: #26335D;
@@ -174,56 +179,56 @@ body {
     left: 150px;
 }
 
-.stars-num{
+.page3-stars-num {
     font-weight: 400;
     font-size: 12px;
     line-height: 16px;
     letter-spacing: 0.2px;
-    color: white ;
+    color: white;
 }
 
-.card-prices {
+.page3-card-prices {
     font-size: 1rem;
     margin-bottom: 10px;
 }
 
-.original-price {
+.page3-original-price {
     font-weight: 700;
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.1px;
-    color:#BDBDBD ;
+    color: #BDBDBD;
     margin-bottom: 10px;
 }
 
-.sale-price {
+.page3-sale-price {
     font-weight: 700;
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.1px;
-    color:#FF7B52;
+    color: #FF7B52;
     margin-bottom: 10px;
 }
 
-.card-link {
+.page3-card-link {
     display: inline-block;
     text-decoration: none;
     color: #8D5CF6;
     font-weight: bold;
     border: 1px solid #8D5CF6;
-    padding: 10px 20px 10px 20px;
+    padding: 10px 20px;
     border-radius: 37px;
     position: relative;
     gap: 10px;
 }
 
-.card-link:after {
+.page3-card-link:after {
     content: '>';
     position: absolute;
     right: 5px;
     transition: right 0.3s ease-in-out;
 }
 
-.card-link:hover:after {
+.page3-card-link:hover:after {
     right: -15px;
 }
